@@ -1,5 +1,5 @@
 Package: SeqVarTools
-Version: 1.7.5
+Version: 1.7.6
 Type: Package
 Title: Tools for variant data
 Description: An interface to the fast-access storage format for VCF
